--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
 <body>
     <h1>Lucas Basques da Silva</h1>
     <img width="200px" src="./img/IMG_0600.JPG" alt="Minha Foto">
+    <p>Me chamo Lucas, Brasileiro, nasci em Brasilia e é onde eu moro atualmente,<br> 
+       Tenho alguns anos experiencia na area de tecnologia, atuei na area de suporte ao usuario e infraestrutura <br>
+       Atualmente estou estudando desenvolvimento web na Trybe.
+    </p>
+    <hr>
+    <h2>Habilidades</h2>
+    <ul>
+        <li>Atendimento ao usuario</li>
+        <LI>Manutenção de Microcomputadores</LI>
+        <li>Manutenção de Servidores e switchs</li>
+        <li> <strong>Instalaçao e monitoramento de Servidores</strong> </li>
+        <li>Cabeamento de redes e infraestrutura</li>
+    </ul>
 
 </body>
 </html>
